WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16102
Safari crashes at IMDb when going back in history
https://bugs.webkit.org/show_bug.cgi?id=16102
Summary
Safari crashes at IMDb when going back in history
Espen B. Andersson
Reported
2007-11-23 07:13:13 PST
1. Go to URL. 2. Click the "The Shining (1980)" link below "Popular Titles". Safari crashes at almost every attempt.
Attachments
Crashlog.
(39.19 KB, application/octet-stream)
2007-12-16 14:20 PST
,
Espen B. Andersson
no flags
Details
Crashlog from Safari on OS X while browsing IMDb.com
(5.31 KB, application/x-rar-compressed)
2008-01-01 09:00 PST
,
Espen B. Andersson
no flags
Details
Crashlog from Safari on OS X while browsing IMDb.com [NEW]
(5.31 KB, application/x-rar-compressed)
2008-01-01 09:01 PST
,
Espen B. Andersson
no flags
Details
Screenshot of website
(177.22 KB, image/jpeg)
2008-01-17 17:43 PST
,
Espen B. Andersson
no flags
Details
Package to reproduce the crash
(105.47 KB, application/x-rar-compressed)
2008-02-07 05:53 PST
,
Espen B. Andersson
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-11-23 09:13:06 PST
Thanks for the bug report, Espen. Could you post or attach a crash log? Thanks!
http://webkit.org/quality/crashlogs.html#win
David Kilzer (:ddkilzer)
Comment 2
2007-11-23 09:14:32 PST
Can't reproduce with a local debug build of WebKit
r27971
with Safari 3.0.4 (523.12) on Mac OS X 10.4.11 (8S165).
Espen B. Andersson
Comment 3
2007-11-23 09:29:35 PST
David, it seems Vista doesn't come with Dr. Watson. Is there any other tool I can use to generate a crashlog?
David Kilzer (:ddkilzer)
Comment 4
2007-11-23 09:34:55 PST
(In reply to
comment #3
)
> David, it seems Vista doesn't come with Dr. Watson. Is there any other tool I > can use to generate a crashlog?
I think there is a work-around for Vista, but I don't know what it is. (It needs to be documented on the webkit.org site, though.)
David Kilzer (:ddkilzer)
Comment 5
2007-11-23 10:53:03 PST
Matt may know/remember the work-around for Vista as well.
Matt Lilek
Comment 6
2007-11-23 13:38:14 PST
There is no easy way that I know off to get a backtrace or reasonably-sized memory dump on Vista short of installing Visual Studio/Visual C++ Express and using that to get a backtrace or grabbing Dr Watson off an XP box. (There are some downloadable tools you can use to get memory dumps, but even when compressed, they are far too large to upload to bugzilla.) That said, I can't reproduce a crash on IMDB on XP with Safari 3.0.4 or ~ToT.
Espen B. Andersson
Comment 7
2007-11-24 00:21:02 PST
Well, it could be Vista specific for all I know. I just did some more testing, and Safari seems to almost always crash when I follow a link from a search on that page. If I go directly to the target using the address field, it works just fine.
Espen B. Andersson
Comment 8
2007-12-16 08:41:33 PST
Safari keeps crashing. Anything I can do to help?
Alexey Proskuryakov
Comment 9
2007-12-16 09:23:44 PST
Have you tested with nightly builds (
http://nightly.webkit.org
)? It's possible that the problem was fixed already (I wouldn't count on it, but it's easier to check!).
David Kilzer (:ddkilzer)
Comment 10
2007-12-16 10:26:43 PST
(In reply to
comment #8
)
> Safari keeps crashing. Anything I can do to help?
Can you get access to a Windows XP system to test? (If it crashes, use the instructions on the web page in
Comment #1
to get a dump file.)
Espen B. Andersson
Comment 11
2007-12-16 14:19:21 PST
Crashes on WinXP as well.
Espen B. Andersson
Comment 12
2007-12-16 14:20:12 PST
Created
attachment 17938
[details]
Crashlog.
David Kilzer (:ddkilzer)
Comment 13
2007-12-16 14:53:38 PST
<
rdar://problem/5650446
>
Espen B. Andersson
Comment 14
2008-01-01 08:54:39 PST
David: What does <
rdar://problem/5650446
> mean? Oh, and by the way (if it's of any use): I've received several confirmation that Safari often crashes on IMDb when browsing picture galleries on OS X. Would a crashlog be of any help?
Espen B. Andersson
Comment 15
2008-01-01 09:00:45 PST
Created
attachment 18225
[details]
Crashlog from Safari on OS X while browsing IMDb.com
Espen B. Andersson
Comment 16
2008-01-01 09:01:57 PST
Created
attachment 18226
[details]
Crashlog from Safari on OS X while browsing IMDb.com [NEW]
Espen B. Andersson
Comment 17
2008-01-01 09:03:10 PST
A third crashlog from another computer is also available at
http://pastebin.no/2981
David Kilzer (:ddkilzer)
Comment 18
2008-01-01 13:32:50 PST
(In reply to
comment #14
)
> David: What does <
rdar://problem/5650446
> mean?
This is an identifier for Apple's internal bug tracking system, Radar.
> Oh, and by the way (if it's of any use): I've received several confirmation > that Safari often crashes on IMDb when browsing picture galleries on OS X. > Would a crashlog be of any help?
This seems like a different bug, so a different bug should be created for it. However, did you start seeing this after Security Update 2007-009? Have you installed Seucrity Update 2007-009 v1.1?
http://docs.info.apple.com/article.html?artnum=61798
Espen B. Andersson
Comment 19
2008-01-01 13:38:08 PST
I haven't installed Security Update 2007-009 yet.
David Kilzer (:ddkilzer)
Comment 20
2008-01-01 14:15:25 PST
(In reply to
comment #14
)
> Oh, and by the way (if it's of any use): I've received several confirmation > that Safari often crashes on IMDb when browsing picture galleries on OS X. > Would a crashlog be of any help?
It appears you have some Safari extensions installed: 0x31b000 - 0x31cfff com.Logitech.Control Center.Scroll Enhancer 2.1.1 /Library/Application Enhancers/LCC Scroll Enhancer.ape/Contents/MacOS/LCC Scroll Enhancer 0xc0000000 - 0xc000efff com.unsanity.ape 2.0.1 /Library/Frameworks/ApplicationEnhancer.framework/Versions/A/ApplicationEnhancer Please try disabling these items to see if that fixes the crashes on Mac OS X.
Espen B. Andersson
Comment 21
2008-01-02 00:38:31 PST
With the Logitech stuff disabled, I get this crashlog:
http://pastebin.no/2986
David Kilzer (:ddkilzer)
Comment 22
2008-01-02 08:00:55 PST
(In reply to
comment #21
)
> With the Logitech stuff disabled, I get this crashlog: > >
http://pastebin.no/2986
You still have Saft installed: 0x33b000 - 0x33cfff com.li.hao.saftloader 1.3.1 (458) /Library/InputManagers/Saft/SaftLoader.bundle/Contents/MacOS/SaftLoader Please disable/remove Saft and try testing again. Also, PLEASE open a new bug for the OS X issues if removing Saft doesn't fix the issue. We are polluting the original bug (which is a Windows XP crasher on IMDB).
Anders Carlsson
Comment 23
2008-01-15 12:29:16 PST
Espen, are you logged into imdb while doing this? How easy is it to reproduce?
Espen B. Andersson
Comment 24
2008-01-15 12:50:00 PST
Anders: Sorry for the lack of response. I'm not on OS X myself, so it's kind of hard to test with plugins disabled. I just did a quick test again, and it seems to crash just about every time I do a search and follow one of the results. This time I wasn't logged in, using WinXP and Safari 3.0.4 (523.15).
Anders Carlsson
Comment 25
2008-01-15 12:57:04 PST
Thank you for your response Espen! Do you see any special ads on any of the pages? What type of internet connection are you on? (I suspect that this is a timing related bug which is why I'm having trouble reproducing it)
Espen B. Andersson
Comment 26
2008-01-15 13:09:06 PST
Disabling Javascript makes the crash go away, so it's either a Javascript crash (doubt it) or related to one of the ads that's included using JS (assume this one's to blame). An easy way for me to reproduce is to have JS activated, then searching for "departed", following "The Departed (2006)" and then going back to the search results. I'm on a pretty good connection (2 830 kbit/s).
Anders Carlsson
Comment 27
2008-01-15 13:40:43 PST
What types of ads do you see? If you could make a screenshot of both pages and attach it would be great!
Espen B. Andersson
Comment 28
2008-01-17 17:43:30 PST
Created
attachment 18519
[details]
Screenshot of website
Espen B. Andersson
Comment 29
2008-01-17 17:45:13 PST
Anders: Please see the latest attachment. That's a screenshot of the search result page Safari just crashed at when going back in history from the "The Departed" page. It's seems to be the ad to the right that's the culprit.
David Kilzer (:ddkilzer)
Comment 30
2008-02-05 23:06:58 PST
Espen, can you capture an IMDB page with the problematic ad in Firefox, then use the "Save as..." feature to save a "web page, complete" formatted page? (You might also try saving the source of the original page.) Once this is done, please zip up the "web page, complete" files and attach to this bug. (Attach the web page source if you save it as well.)
Espen B. Andersson
Comment 31
2008-02-07 05:53:25 PST
Created
attachment 18983
[details]
Package to reproduce the crash
Espen B. Andersson
Comment 32
2008-02-07 05:54:54 PST
David, please see the new attachment. By loading find.htm in Safari, then following the first link to The Departed (2006) (which points to imdb.com) and then going back, Safari always crashes.
Anders Carlsson
Comment 33
2008-02-07 14:25:59 PST
Espen, thank you so much! I was finally able to reproduce this reliably! I am trying to figure out what's going on now. Once again, thanks!
Espen B. Andersson
Comment 34
2008-02-07 14:43:02 PST
(In reply to
comment #33
)
> Espen, thank you so much! I was finally able to reproduce this reliably! I am > trying to figure out what's going on now. Once again, thanks!
Great! Feel free to keep me posted :-)
Anders Carlsson
Comment 35
2008-02-08 16:09:33 PST
Committed revision 30101.
Espen B. Andersson
Comment 36
2008-02-09 09:24:39 PST
(In reply to
comment #35
)
> Committed revision 30101.
Great, that was fast :-) Two questions: - May I ask what triggered the crash? - When will the fix be in a public release?
Anders Carlsson
Comment 37
2008-02-11 15:54:19 PST
* What triggered the crash was that an onload handler was moving around frames, changing the frame hierarchy while we were traversing the same hierarchy stopping loads. * We can't comment on future products, but you should be able to verify that the bug has been fixed using a nightly build - see
http://nightly.webkit.org/
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug