WebCore:

Reviewed by Mitz.

        <rdar://problem/5650446>
        http://bugs.webkit.org/show_bug.cgi?id=16102
        Crash in FrameLoader::stopLoadingSubframes() on IMDB page

        Store the child frame in a RefPtr to prevent it from being deleted when the
        frame tree changes while calling stopAllLoaders().

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::stopLoadingSubframes):

LayoutTests:

        Reviewed by Mitz.

        <rdar://problem/5650446>
        http://bugs.webkit.org/show_bug.cgi?id=16102
        Crash in FrameLoader::stopLoadingSubframes() on IMDB page

        * http/tests/navigation/changing-frame-hierarchy-in-onload-expected.txt: Added.
        * http/tests/navigation/changing-frame-hierarchy-in-onload.html: Added.



Canonical link: https://commits.webkit.org/23912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30101 268f45cc-cd09-0410-ab3c-d52691b4dbfc