WebCore/loader/FrameLoader.cpp
@@ -2371,7 +2371,7 @@ bool FrameLoader::shouldAllowNavigation(Frame* targetFrame) const
 
 void FrameLoader::stopLoadingSubframes()
 {
-    for (Frame* child = m_frame->tree()->firstChild(); child; child = child->tree()->nextSibling())
+    for (RefPtr<Frame> child = m_frame->tree()->firstChild(); child; child = child->tree()->nextSibling())
         child->loader()->stopAllLoaders();
 }
 
